--- a/action.yml
+++ b/action.yml
@@ -1,22 +1,48 @@
-name: 'Composite Run Steps Action Template'
+name: 'Register Windows Service'
 
-description: 'Add description here'
+description: 'This action registers a windows service on a remote windows machine.'
 
 inputs:
-  input-1:
-    description: 'Add a description here'
+  service-name:
+    description: The name of the Windows service to register
     required: true
-
-outputs:
-  output-1:
-    description: 'Add description here'
-    value: '${{ steps.step_1.outputs.world }}'
+  deployment-path:
+    description: The local path on the remote machine to the service executable, i.e. c:\service_directory\service.exe
+    required: true
+  server:
+    description: 'The name of the target server, i.e. machine.domain.com or 10.10.10.1'
+    required: true
+  service-credential-user:
+    description: The service credential user name, i.e. domain\user_id
+    required: false
+  service-credential-password:
+    description: The service credential password
+    required: false
+  service-account-id:
+    description: 'The service account name to log into the server to perform operation'
+    required: true
+  service-account-password:
+    description: 'The service account password to log into the server to perform operation'
+    required: true
+  server-public-key:
+    description: 'Path to remote server public ssl key'
+    required: true
 
 runs:
   using: 'composite'
   steps:
-    - name: Step 1
-      id: step_1
-      shell: bash
+    - name: Action
+      id: action
+      shell: powershell
       run: |
-        echo "::set-output name=hello::world"
+        $secure_password = ConvertTo-SecureString -String "${{ inputs.service-account-password }}" -AsPlainText -Force
+        $service_credential_password = ConvertTo-SecureString -String "${{ inputs.service-credential-password }}" -AsPlainText -Force
+        ${{ github.action_path }}/register_service.ps1 `
+          -service_name '${{ inputs.service-name }}' `
+          -deployment_path '${{ inputs.deployment-path }}' `
+          -server '${{ inputs.server }}' `
+          -service_user '${{ inputs.service-credential-user }}' `
+          -service_password $service_credential_password `
+          -user_id '${{ inputs.service-account-id }}' `
+          -password $secure_password `
+          -cert_path '${{ inputs.server-public-key }}'
