- Changed ssl key to optional cert path - +semver:breaking

--- a/action.yml
+++ b/action.yml
@@ -26,9 +26,10 @@ inputs:
   service-account-password:
     description: 'The service account password to log into the server to perform operation'
     required: true
-  server-public-key:
-    description: 'Path to remote server public ssl key'
-    required: true
+  server-cert-path:
+    description: 'Path to remote server public ssl cert, only necessary if the cert is not already installed on the actions runner'
+    required: false
+    default: ''
 
 runs:
   using: 'composite'
@@ -48,4 +49,4 @@ runs:
           -service_password $service_credential_password `
           -user_id '${{ inputs.service-account-id }}' `
           -password $secure_password `
-          -cert_path '${{ inputs.server-public-key }}'
+          -cert_path '${{ inputs.server-cert-path }}'
