--- a/action.yml
+++ b/action.yml
@@ -34,8 +34,8 @@ runs:
       id: action
       shell: powershell
       run: |
-        $service_credential_password = ConvertTo-SecureString -String "${{ inputs.service-credential-password }}" -AsPlainText -Force
-        $secure_password = ConvertTo-SecureString -String "${{ inputs.service-account-password }}" -AsPlainText -Force
+        $service_credential_password = ConvertTo-SecureString -String '${{ inputs.service-credential-password }}' -AsPlainText -Force
+        $secure_password = ConvertTo-SecureString -String '${{ inputs.service-account-password }}' -AsPlainText -Force
 
         ${{ github.action_path }}/register_service.ps1 `
           -service_name '${{ inputs.service-name }}' `
